// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    expense
     
    1
     tottaling 
    €552.03
     
  </h1>
</div>
`;

exports[`Should render expensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    expenses
     
    23
     tottaling 
    €552,225.03
     
  </h1>
</div>
`;
